Thu Aug 25 01:24:33 2011  Naohisa Goto  <ngotogenome@gmail.com>

	* test/fileutils/test_fileutils.rb (test_chmod_symbol_mode): Solaris
	  seems to behave the same as FreeBSD.

Thu Aug 25 01:11:36 2011  Naohisa Goto  <ngotogenome@gmail.com>

	* test/ruby/test_rubyoptions.rb (test_script_from_stdin): slave pty
	  should be manipulated because master pty may not be a tty on some
	  environment (e.g. Solaris). [Bug:#5222] [ruby-dev:44420]

Wed Aug 24 15:13:56 2011  Koichi Sasada  <ko1@atdot.net>

	* iseq.h, iseq.c, compile.c: Change the line number data structure
	  to solve an issue reported at [ruby-dev:44413] [Ruby 1.9 - Bug #5217].
	  Before this fix, each instruction has an information including
	  line number (iseq::iseq_insn_info_table).  Instead of this data
	  structure, recording only line number changing places
	  (iseq::iseq_line_info_table).
	  The order of entries in iseq_line_info_table is ascending order of
	  iseq_line_info_table_entry::position.  You can get a line number
	  by an iseq and a program counter with this data structure.
	  This fix reduces memory consumption of iseq (bytecode).
	  On my measurement, a rails application consumes 21.8MB for
	  iseq with this fix on the 32bit CPU.  Without this fix, it
	  consumes 24.7MB for iseq [ruby-dev:44415].

	* proc.c: ditto.

	* vm_insnhelper.c: ditto.

	* vm_method.c: ditto.

	* vm.c (rb_vm_get_sourceline): change to use rb_iseq_line_no().

Wed Aug 24 09:49:10 2011  Koichi Sasada  <ko1@atdot.net>

	* insns.def (defined): fix to checking class variable.
	  A patch by Magnus Holm <judofyr@gmail.com>.  Thanks!

	* test/ruby/test_variable.rb: add a test for above.

Wed Aug 24 08:53:06 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc:  Update to RDoc 3.9.3.  Fixes RDoc with `ruby -Ku`.  Allows
	  HTTPS image paths to be turned into <img> tags.  Prevents special
	  markup inside <tt> from being processed.

Wed Aug 24 07:57:43 2011  Eric Hodel  <drbrain@segment7.net>
